--- a/index.html
+++ b/index.html
@@ -71,7 +71,15 @@
             </fieldset>
         </form>
     </div>
-    <script type="module" src="script.js"></script> 
-   
+    <div id="modal" class="modal">
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <p>Ao compartilhar seus dados com a MRJ Farma, estaremos enviando atualizações sobre nossa marca e produtos.</p>
+          <button id="confirmYesBtn">OK</button> 
+          <br>
+          <a href="https://mrjfarma.com.br/politica-de-privacidade/" class="privacy-policy-btn">Política de Privacidade</a>
+        </div>
+      </div>    
+    <script type="module" src="script.js"></script>    
 </body>
 </html>
