--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
                 <br><br>
                 <div class="inputBox">
-                    <input type="text" name="CRM" id="CRM" class="inputUser" required>
+                    <input type="tel" name="CRM" id="CRM" class="inputUser" required>
                     <label for="CRM" class="labelInput">CRM</label>
                 </div>
                 <br><br>
